# ucmtc-gcs

./: .gitignore  DOCS.md  MOCK_TELEMETRY_README.md  QUICK_REFERENCE.md  README.md  ROVER_STRUCTURE_SUMMARY.md  RUNNING.md  TELEMETRY_SCHEMA_CONTRACT.md  clean_gs.sh  example_gcs_integration.py  gcs_gui_runner.py  gcs_tui_runner.py  image_subscriber.py  mock_rover_telemetry.py  quick_start_mock_telemetry.sh  telemetry_payload.schema.json  topics.sh
.agents/: AGENTS.md
e-stop/get_mac_address/: get_mac_address.ino
e-stop/receiver_all/: receiver_all.ino
e-stop/transmitter/: transmitter.ino
gcs_app/: __init__.py  main.py  qt_compat.py
gcs_app/core/: __init__.py  data_models.py  global_connector.py  ros_worker.py
gcs_app/ui/: __init__.py
gcs_app/ui/atoms/: __init__.py  (+2 more)
rover_ws/src/rover_core/: package.xml  setup.cfg  setup.py
rover_ws/src/rover_core/config/: mediamtx.yml  params.yaml
rover_ws/src/rover_core/launch/: rover_bringup.launch.py
rover_ws/src/rover_core/rover_core/: __init__.py  cmd_vel_to_wheels.py  motor_control_node.py  navigation_node.py  ps5_nfs_teleop.py  ros_compat.py  safety_node.py  telemetry_aggregator.py  telemetry_utils.py  vision_node.py  wheel_cmds_serial_bridge.py
tests/: test_gcs_rover.py  test_nfs_teleop.py
web_gcs/: api.py  app.js  bridge_node.py  camera.html  imu.html  index.html  legacy_server.py  lidar.html  network_config.json  ros_introspection.py  ros_subscriber.py  serializer.py  server_state.py  styles.css  telemetry_hooks.py  topic_config.json  topic_registry.py  topics.json  web_gcs_server.py  websocket.py
(+8 files in other folders)
